load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "tq",
    srcs = ["tq.cpp"],
    hdrs = ["tq.h"],
    copts = ["-std=c++20"],
    data = ['__init__.py'],
    visibility = ["//visibility:public"],
    include_prefix = "roboflex/transport/tq",
    deps = ["//core:roboflex_core"]
)
